2010-03-03  Bogdan Cristea  <cristeab@users.sourceforge.net>
	* itpp/tests/bessel_test.cpp, itpp/tests/newton_search_test.cpp: changed tests files in order to
	pass tests under Ubuntu. The corresponding *.ref files were also changed.

2010-02-24  Bogdan Cristea  <cristeab@users.sourceforge.net>

	* itpp/tests/bessel_test.cpp, itpp/tests/filter_design_test.cpp, 
	itpp/tests/itfile_test.cpp, itpp/tests/newton_search_test.cpp, 
	itpp/tests/pulse_shape_test.cpp: fixed format is used instead of 
	scientific format in order to pass tests checking in Visual C++.
	As a consequence, the itpp/tests/*.ref files corresponding to the above tests are also changed.

	* itpp/win32/itpp_acml.vcproj, itpp/win32/itpp_acml_tests/*vcproj, 
	itpp/win32/itpp_mkl.vcproj, itpp/win32/itpp_mkl_tests/*vcproj: added 
	automatic test checking in Visual C++, project files are converted to Visual C++ 2008.
	The tests checking is implemented for each project as a "Post-Build Event".

	* itpp/extras/check_tests.bat: added batch file for checking test results in Windows

2010-02-08  Robert Orzechowski  <tytusz@users.sourceforge.net>

	* AUTHORS, itpp/comm/galois.h: Fixes bug report #2936395

2010-01-24  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* AUTHORS, itpp/comm/ldpc.h, itpp/comm/ldpc.cpp: Improvements to
	the LDPC decoder. 1) Generalization to handle codes with arbitrary
	check node degrees. 2) Efficiency improvements for large node
	degrees.

	Thanks to Gorka Prieto for this patch.

2010-01-10  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/algebra/lapack.h, itpp/base/blas.h: Support latest
	ACML built with Intel Fortran compiler. It uses uppercase naming
	conventions for BLAS and LAPACK routines. This is only required on
	MS Windows (MSVC++).

	* configure.ac.in, itpp/base/Makefile.am, itpp/base/blas.h,
	itpp/base/sources.mk, itpp/base/vec.cpp, itpp/base/vec.h,
	itpp/base/zdotusub.f, m4/acx_blas.m4: Do not use zdotusub.f