@@ -16,7 +16,7 @@ no_feval = 4
 trace:
 alpha = [0.000000 1.000000 0.100000 0.010000 0.003004]
 F = [12.100000 6405495599.000000 373080.932048 102.177223 8.403265]
-dF = [-13556.840000 25963610893.000000 17461465.000000 9898.069917 8287.177114]
+dF = [-13556.840000 25963610893.000000 17461465.026720 9898.069917 8287.177114]
 
 Exact: 
 xn = [-1.030081 1.069355]
@@ -27,7 +27,7 @@ no_feval = 7
 trace:
 alpha = [0.000000 1.000000 0.100000 0.010000 0.003004 0.001652 0.001487 0.001576]
 F = [12.100000 6405495599.000000 373080.932048 102.177223 8.403265 2.084316 2.092433 2.064049]
-dF = [-13556.840000 25963610893.000000 17461465.000000 9898.069917 8287.177114 531.883089 -638.606410 1.713651]
+dF = [-13556.840000 25963610893.000000 17461465.026720 9898.069917 8287.177114 531.883089 -638.606410 1.713651]
 
     Newton_Search 
 --------------------
