@@ -1,3 +1,7 @@
+2010-03-04  Bogdan Cristea  <cristeab@users.sourceforge.net>
+	* itpp/base/converters.cpp, itpp/base/converters.h: added round_to_infty() function,
+	changed threshold value in round_to_infty() from 1e6 to 1e9
+
 2010-03-03  Bogdan Cristea  <cristeab@users.sourceforge.net>
 	* itpp/tests/bessel_test.cpp, itpp/tests/newton_search_test.cpp: changed tests files in order to
 	pass tests under Ubuntu. The corresponding *.ref files were also changed.
